deployment/openshift/app-authors-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-authors
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-authors
  template:
    metadata:
      labels:
        app: app-authors
    spec:
      containers:
        - name: app-authors
          image: docker.io/byronsda45/app-authors:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: app-authors
spec:
  selector:
    app: app-authors
  ports:
    - port: 8080
      targetPort: 8080
