deployment/openshift/app-books-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-books
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-books
  template:
    metadata:
      labels:
        app: app-books
    spec:
      containers:
        - name: app-books
          image: docker.io/byronsda45/app-books:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: app-books
spec:
  selector:
    app: app-books
  ports:
    - port: 8080
      targetPort: 8080
