deployment/openshift/app-customers-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-customers
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-customers
  template:
    metadata:
      labels:
        app: app-customers
    spec:
      containers:
        - name: app-customers
          image: docker.io/byronsda45/app-customers:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 35
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: app-customers
spec:
  selector:
    app: app-customers
  ports:
    - port: 8080
      targetPort: 8080
